# Triangles

./: CMakeLists.txt
include/: geometry.hpp
main/: CMakeLists.txt  main.cpp
src/: main.cpp
unit_tests/: CMakeLists.txt  unit_test.cpp
